dnl Process this file with autoconf to produce a configure script.
AC_INIT(C/QWKToSpool.c)
AC_CANONICAL_BUILD
AC_CANONICAL_HOST
AC_SUBST(build)
AC_CANONICAL_TARGET
AC_SUBST(target)
AM_INIT_AUTOMAKE([TkNewsIII],1.1.0)
PACKAGE_NAME="TkNewsIII"

if test "x${prefix}" = "xNONE"; then
    prefix=/usr/local
fi
if test "x${exec_prefix}" = "xNONE"; then
    exec_prefix="${prefix}"
fi

BUILD_DIR=`pwd`
TOP_DIR=${BUILD_DIR}

AC_SUBST(TOP_DIR)
AC_SUBST(BUILD_DIR)


dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PATH_PROGS(SDX,sdx.kit sdx)
AC_PATH_PROGS(TCLKIT,tclkit)
TCLKITRUN="${TCL_EXEC_PREFIX}/bin/tclkit$EXEEXT"
AC_ARG_WITH(tclkitrun, [  --with-tclkitrun=filename     use tclkit runtime in filename], TCLKITRUN=$withval,)
if test -x $TCLKITRUN;  then
   AC_MSG_RESULT([using tclkit runtime $TCLKITRUN])
else
   AC_MSG_ERROR([Can't find tclkit, please use --with-tclkitrun to set the tclkit])
fi
AC_SUBST(TCLKITRUN)

m4_pattern_allow(PKG_)

TEA_INIT([3.5])
TEA_PATH_TCLCONFIG
TEA_LOAD_TCLCONFIG
TEA_PROG_TCLSH
TEA_ENABLE_SHARED
TEA_CONFIG_SYSTEM
TEA_CONFIG_CFLAGS
TEA_PUBLIC_TCL_HEADERS
AC_SUBST(SHLIB_SUFFIX)

AX_PKG_DOXYGEN(1.6.0, [], [ AC_MSG_ERROR([DOXYGEN 1.6.0 or later is required to build..]) ])

AC_PATH_PROG(PDFLATEX,pdflatex,/bin/true)
AC_PATH_PROG(MAKEINDEX,makeindex,/bin/true)
AC_PATH_PROG(BIBTEX,bibtex,/bin/true)
AC_CHECK_PROGS(HTLATEX, htlatex htlatex.sh)

dnl Checks for libraries.

dnl Check for external Tcl/Tk libraries
AX_SNIT
AX_URI
AX_NCGI
AX_FILEUTIL
AX_CMDLINE
AX_IMAP4
AX_SASL
AX_MIME
AX_BASE64
AX_MD5
AX_OTP

AC_MSG_CHECKING([Checking target Img])
case $target_cpu in 
    x86_64)
        AC_SUBST(IMG_TARBZ, Img1.4_x86_64.tar.bz2)
        ;;
    i*86)
        AC_SUBST(IMG_TARBZ, Img1.4_ix86.tar.bz2)
        ;;
esac
AC_MSG_RESULT([IMG_TARBZ is $IMG_TARBZ])

dnl for GPG ME library tcl interface 
AC_LIBTOOL_DLOPEN
AM_PROG_LIBTOOL
AX_PKG_SWIG(1.3)
AM_PATH_GPGME
GPGME_VERSION="$gpgme_version"
AC_SUBST(GPGME_VERSION)

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_STRUCT_TM

dnl Checks for library functions.
AC_CHECK_FUNCS(mkdir regcomp)

AC_CONFIG_FILES(Makefile C/Makefile Scripts/Makefile BuildData/Makefile \
          Docs/Makefile Docs/Doxyfile BuildScripts/Makefile GpgME/Makefile \
          BUILDSYMBOLS.tcl)
AC_CONFIG_SUBDIRS([tls1.6.7])
AC_OUTPUT

