EXTRA_DIST = DynamicHelp.tcl IconsAndImages.tcl snitmainframe.tcl \
            snitscrollw.tcl unknown.xpm DeepwoodsBanner.png \
            TkNewsIIIicon_mask.xbm TkNewsIIIicon.xbm unknown.xpm \
            TkNewsIII.src QWKFunctions.tcl TopWindow.tcl \
            SpoolFunction.tcl GroupFunctions.tcl snitbuttonbox.tcl \
            ArticleFunctions.tcl snitdialog.tcl CommonFunctions.tcl \
            snitrotext.tcl questhead.xbm info.xbm AddressBook.tcl \
            gray50.xbm snitHTMLHelp.tcl Split_flatmessagefile.src
